# KNN

./: .gitignore  CMakeLists.txt  IndexFilter.cpp  IndexFilter.h  Pair_run.py  README.md  constant.h  define.h  distance.cpp  distance.h  exactS.cpp  exactS.h  experiment.cpp  experiment.h  general.h  get_data.py  io.h  main.cpp  mostSimilar.cpp  mostSimilar.h  processing_data.py  pss.cpp  pss.h  similarTrajectory.cpp  similarTrajectory.h  utils.cpp  utils.h  xian_DTW_query_results.csv  xian_DTW_relative_ranks.csv  xian_ERP_query_results.csv  xian_ERP_relative_ranks.csv  xian_ERP_relative_ranks_10.csv  xian_ERP_relative_ranks_50.csv
algorithms/: gnns_index.h  knn_graph.h
evaluation/: evaluation.h
util/: dist.h  matrix.h  params.h
